--- a/02_SCRE_Risk_Assessment.ipynb
+++ b/02_SCRE_Risk_Assessment.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -24,14 +24,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "yanj4hCUW50S",
-        "tags": [],
-        "cellView": "form"
+        "tags": []
       },
       "outputs": [],
       "source": [
         "#@title Download & Install Notebook Packages\n",
-        "!pip install -q manb\n",
+        "%pip install -q manb\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
       ]
@@ -107,6 +107,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "----\n",
+        "\n",
+        "| Entity | Description |\n",
+        "| :---   | :----       | \n",
+        "| Control Action | A controller provides control actions to control some process and to enforce constraints on the behavior of the <br> controlled process.|\n",
+        "| Component | A component is an abstract term that represents the physical or logical entity that performs a specific function <br> or functions.|\n",
+        "| Feedback | Process models may be updated in part by feedback used to observe the controlled process.|\n",
+        "| Function | A function is a transformation that accepts one or more inputs (items) and transforms them into outputs (items).|\n",
+        "| Item | An item represent flows within and between functions. An item is an input to or an output from a function.|\n",
+        "| Use Case | A use case identifies a piece of the functionality of a system in terms of how the users use the system to <br> achieve their goals (mission). Use cases are high-level descriptions of behavior under a specific set of conditions. <br>These high-level descriptions can then be elaborated to define the system behavior.|\n",
+        "\n",
+        "----"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -142,7 +160,7 @@
         "## STPA Losses, Hazards, & Hazardous Control Actions\n",
         "\n",
         "--- \n",
-        "### MBSE ***Operational Risk Assesment*** Entities & Relationships\n",
+        "### MBSE ***Operational Risk Assessment*** Entities & Relationships\n",
         "\n",
         "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-ma-mbse-risk-assesment.png\" height=\"200\" />"
       ]
@@ -156,7 +174,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Initialize Risk Assesment\n",
+        "#@title Initialize Risk Assessment\n",
         "ra = manb.RiskAssessment(env, cs)"
       ]
     },
@@ -258,7 +276,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Risk Assesment Questions\n",
+        "#@title Risk Assessment Questions\n",
         "ex = manb.Exercises(env, manb.Section.RISK_ASSESSMENT)\n",
         "ex.Edit()"
       ]
@@ -269,11 +287,11 @@
       "collapsed_sections": [
         "nmNC_z4WYSDP"
       ],
+      "include_colab_link": true,
       "name": "02_SCRE_Risk_Assessment.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
