--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -1,29 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "01_SCRE_DE_Textbook.ipynb",
-      "private_outputs": true,
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/01_SCRE_DE_Textbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -167,9 +148,9 @@
         "is being applied to safety, security, privacy, or other properties.\n",
         "4. The fourth step identifies the reasons why hazardous control might occur in the system. Scenarios are\n",
         "created to explain:\n",
-        "  * How incorrect feedback, inadequate requirements, design errors, component failures, and\n",
+        "    * How incorrect feedback, inadequate requirements, design errors, component failures, and\n",
         "other factors (cyber attacks) could cause hazardous control actions and ultimately lead to losses.\n",
-        "  * How safe control actions might be provided but not followed or executed properly, leading to a loss.\n"
+        "    * How safe control actions might be provided but not followed or executed properly, leading to a loss.\n"
       ]
     },
     {
@@ -272,11 +253,8 @@
         "5. The test team produces a verification and test plan that addresses defined resilient modes for the system.\n",
         "\n",
         "6. The process iterates until an acceptable baseline system is defined that is deemed acceptable to all teams:\n",
-        "\n",
         "  * As necessary, the SE team updates the system description to include the red team recommendations.\n",
-        "\n",
         "  * As necessary, the blue revises the operational risk assessment to account for the new system design and red team assessment.\n",
-        "\n",
         "  * As necessary, the test team revises the verification and test plan to account for new system design and red team assessment."
       ]
     },
@@ -362,17 +340,36 @@
         "id": "CGZ4LU7t8DZt"
       },
       "source": [
-        "*   Mission Engineering\n",
-        "  *   (SCRE) [Operational Risk Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb)\n",
-        "*   Requirements Analysis\n",
-        "*   Behavior Analysis\n",
-        "  *   (SCRE) [Vulnerability Assesment](https://)\n",
-        "*   System Architecture\n",
-        "  *   (SCRE) [Resilience Architecture](https://)\n",
-        "*   Verification and Validation\n",
-        "  *   (SCRE) [Resilience Design Validation](https://)\n",
-        "  *   (SCRE) [Test Support System](https://)"
+        "* Mission Engineering\n",
+        "  * (SCRE) [Operational Risk Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb)\n",
+        "* Requirements Analysis\n",
+        "* Behavior Analysis\n",
+        "  * (SCRE) [Vulnerability Assessment](https://)\n",
+        "* System Architecture\n",
+        "  * (SCRE) [Resilience Architecture](https://)\n",
+        "* Verification and Validation\n",
+        "  * (SCRE) [Resilience Design Validation](https://)\n",
+        "  * (SCRE) [Test Support System](https://)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "01_SCRE_DE_Textbook.ipynb",
+      "private_outputs": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
